--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,6 +13,9 @@ jobs:
   build-and-push:
     runs-on: ubuntu-latest
 
+    outputs:
+      ec2_ip: ${{ steps.get_ec2_ip.outputs.EC2_PUBLIC_IP }}
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
@@ -20,12 +23,13 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
-      # Step 1: Set up AWS credentials from GitHub Secrets
+      # Step 1: Set up AWS credentials using Access Keys
       - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v1
+        uses: aws-actions/configure-aws-credentials@v2
         with:
-          role-to-assume: ${{ secrets.AWS_ROLE }}
-          aws-region: ${{ secrets.AWS_REGION }}
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ env.AWS_REGION }}
 
       # Step 2: Log in to Amazon ECR
       - name: Log in to Amazon ECR
@@ -63,39 +67,41 @@ jobs:
         env:
           EC2_PUBLIC_KEY: ${{ secrets.EC2_PUBLIC_KEY }} 
         run: terraform apply -auto-approve -var="public_key=${EC2_PUBLIC_KEY}"
-      
+
       # Step 7: Capture EC2 IP from Terraform Output
       - name: Get EC2 Public IP
         id: get_ec2_ip
         run: |
           EC2_IP=$(terraform output -raw ec2_public_ip)
           echo "EC2_PUBLIC_IP=${EC2_IP}" >> $GITHUB_ENV
+          echo "::set-output name=EC2_PUBLIC_IP::$EC2_IP"
 
   deploy:
     needs: build-and-push
     runs-on: ubuntu-latest
     environment: dev  
     steps:
-      - name: Configure AWS Credentials with Role
+      - name: Configure AWS Credentials with Access Keys
         uses: aws-actions/configure-aws-credentials@v2
         with:
-          role-to-assume: ${{ env.AWS_ROLE }}
-          aws-region: ${{ secrets.AWS_REGION }}
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ env.AWS_REGION }}
 
       - name: Set up SSH key
         run: |
           echo "${{ secrets.EC2_KEY }}" > /tmp/private_key
           chmod 600 /tmp/private_key
-    
+
       - name: Deploy to EC2
         env:
-          ECR_REGISTRY: "${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com"
+          ECR_REGISTRY: "${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ env.AWS_REGION }}.amazonaws.com"
           IMAGE_TAG: "latest"
-          EC2_PUBLIC_IP: "${{ env.EC2_PUBLIC_IP }}"
+          EC2_PUBLIC_IP: "${{ needs.build-and-push.outputs.ec2_ip }}"
         run: |
           # Step 1: SSH into EC2 and pull the Docker image
           ssh -o "StrictHostKeyChecking=no" -i /tmp/private_key ec2-user@$EC2_PUBLIC_IP << EOF
-            aws ecr get-login-password --region ${{ secrets.AWS_REGION }} | docker login --username AWS --password-stdin $ECR_REGISTRY
+            aws ecr get-login-password --region ${{ env.AWS_REGION }} | docker login --username AWS --password-stdin $ECR_REGISTRY
             docker pull $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
 
             # Step 2: Stop and remove any existing container
